# 3-package-blue_whale

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml  event-logger.yml
src/ghosty/: __main__.py  ghosty.py
tests/: test_ghost.py
