[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosty_teammate"
description = "A ghost teammate bot that pretends to work but does absolutely nothing."
version = "0.0.3"
authors = [
  { name="Celia Liang", email="cl7093@nyu.edu" },
  { name="Mumu Li", email="ml9389@nyu.edu" },
  { name="Xiongfeng Li", email="xl5199@nyu.edu" },
  { name="Meili Liang", email="ml8397@nyu.edu" },
  { name="Hanxi Li", email="hl5445@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ghost", "ghost teammate", "bot", "humor"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-blue_whale"
"Repository" = "https://github.com/swe-students-spring2026/3-package-blue_whale.git"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-blue_whale/issues"

[project.scripts]
ghosty = "ghosty.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
